Fix z-index issues

--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -8,6 +8,7 @@
   top: 0;
   transition: opacity .5s;
   width: 100%;
+  z-index: -1;
 
   &.active {
     opacity: 1;
