--- a/app/scss/_info-window.scss
+++ b/app/scss/_info-window.scss
@@ -2,12 +2,12 @@
   background: white;
   bottom: 0;
   opacity: 0;
-  overflow-y: scroll;
   position: fixed;
   right: 0;
   top: 0;
   transition: all .5s;
   width: 100%;
+  z-index: -1;
 
   &.active {
     display: block;
